# shuffle_rgb_components

./: Cargo.toml  README.md
src/: main.rs
