[package]
name = "swap_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
image = { version = "0.24.2", features = ["jpeg"] }
log = "0.4.17"
rand = "0.8.5"
simplelog = "0.12.0"
